2007-02-05  Thomas Schwinge  <tschwinge@gnu.org>

	* configfrag.ac: Enhance comments.
	
	* vm/vm_debug.c (MACH_VM_DEBUG): Correctly place conditional.

2007-02-04  Thomas Schwinge  <tschwinge@gnu.org>

	* doc/mach.texi (thread_switch): Enhance a bit.

	* doc/Makefrag.am ($(web)): Use ``mkdir -p''.

	* doc/mach.texi: Fix unusual hyphens.
	
	* i386/i386/hardclock.c: Don't check for the `SYMMETRY' platform.

	* kern/timer.h: Add some comments from...
	* i386/i386/timer.h: ... here and remove this file.

2007-01-26  Thomas Schwinge  <tschwinge@gnu.org>

	* doc/mach.texi: Fix the last change.

2007-01-22  Thomas Schwinge  <tschwinge@gnu.org>

	* COPYING: Update via GNU automake 1.10.
	* doc/fdl.texi: Update from <http://www.gnu.org/licenses/fdl.texi>.
	* doc/gpl.texi: Update from <http://www.gnu.org/licenses/gpl.texi>.
	* doc/mach.texi: Use the GFDL 1.2.

2007-01-21  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* doc/mach.texi: Many typos fixed.

2007-01-11  Thomas Schwinge  <tschwinge@gnu.org>

	* DEVELOPMENT (LAYOUT OF THE SOURCE TREE): New section.

	These following files are regenerated by running ``autoreconf -i'' and
	``make info''.
	* INSTALL: Remove file.
	* Makefile.in: Likewise.
	* aclocal.m4: Likewise.
	* build-aux/compile: Likewise.
	* build-aux/config.guess: Likewise.
	* build-aux/config.sub: Likewise.
	* build-aux/depcomp: Likewise.
	* build-aux/install-sh: Likewise.
	* build-aux/mdate-sh: Likewise.
	* build-aux/missing: Likewise.
	* build-aux/texinfo.tex: Likewise.
	* config.h.in: Likewise.
	* configure: Likewise.
	* doc/mach.info: Likewise.
	* doc/mach.info-1: Likewise.
	* doc/mach.info-2: Likewise.
	* doc/stamp-vti: Likewise.
	* doc/version.texi: Likewise.

2007-01-06  Thomas Schwinge  <tschwinge@gnu.org>

	* ddb/db_break.c (db_delete_thread_breakpoint): Don't declare
	`db_cond_free'.
	* ddb/db_run.c: Include <ddb/db_cond.h>.
	(db_stop_at_pc): Don't declare `db_cond_check'.
	* ddb/db_input.c: Include <ddb/db_input.h>.